--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/keyboard": "1.0.3",
     "@capacitor/status-bar": "1.0.3",
     "@ionic/angular": "^5.5.2",
+    "chart.js": "^3.6.0",
     "firebase": "^8.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
